[package]
name = "1m5_cli"
version = "0.7.1"
authors = ["objectorange <objectorange@1m5.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A general command line interface"
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/1m5/1m5-rust"
repository = "https://github.com/1m5/1m5-rust"
publish = false
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.5"
exitfailure = "0.5.1"

structopt = "0.3"

ra_common = "0.0.2"

1m5_common = { path = "../1m5_common"}


[dev-dependencies]
assert_cmd = "0.10"