[package]
name = "1m5_common"
version = "0.0.1"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Common functions for 1M5 programs."
publish = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.28"


