[package]
name = "1m5_mobile"
version = "0.7.1"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Mobile Dapp for 1M5 Platform"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_common = "0.0.2"
1m5_platform = { path = "../1m5_platform"}
