[package]
name = "1m5_platform"
version = "0.0.1"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Platform Dapp providing censorship-resistant communications and services"
publish = false
readme = "README.md"
keywords = ["censorship resistance","privacy","decentralized application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.28"
seda_bus = "0.0.13"

1m5_common = { path = "../1m5_common"}


