[package]
name = "cli"
version = "0.7.0"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Command-Line Interface for 1M5 Platform"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = { path = "../platform"}

