[package]
name = "desktop"
version = "0.7.0"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Desktop Dapp for 1M5 Platform"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_common = "0.0.2"
platform = { path = "../platform"}
