[package]
name = "onemfive_common"
version = "0.0.1"
authors = ["objectorange <objectorange@1m5.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Common functions for 1M5 programs."
homepage = "https://1m5.io"
documentation = "https://github.com/1m5/1m5-rust"
repository = "https://github.com/1m5/1m5-rust"
publish = true
readme = "README.md"
keywords = ["1M5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.0.28"


