[package]
name = "onemfive_mobile"
version = "0.0.1"
authors = ["objectorange <objectorange@1m5.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Mobile Dapp for 1M5 Platform"
homepage = "https://1m5.io"
documentation = "https://github.com/1m5/1m5-rust"
repository = "https://github.com/1m5/1m5-rust"
publish = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_common = "0.0.2"

onemfive_common = "0.0.1"
