[package]
name = "platform"
version = "0.7.0"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Platform Dapp providing censorship-resistant communications and services"
publish = false
readme = "README.md"
keywords = ["censorship resistance","privacy","decentralized application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_common = "0.0.2"
