[package]
name = "seed"
version = "0.7.0"
authors = ["objectorange <objectorange@1m5.io>"]
edition = "2018"
description = "Runs Platform as a Seed node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = { path = "../platform"}